# LlamaCppDektopTool

./: .gitignore  DISCLAIMER.MD  LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
composeApp/: build.gradle.kts
composeApp/schemas/ru.llama.tool.data.room.MainDatabase/: 1.json
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/cpp/: CMakeLists.txt  ggml-cann.h  ggml-cpp.h  ggml-cpu.h  ggml-cuda.h  ggml-sycl.h  llama-android.cpp  llama.h  native-lib.cpp
composeApp/src/androidMain/cpp/common/: CMakeLists.txt  arg.cpp  arg.h  base64.hpp  chat-parser.cpp  chat-parser.h  chat.cpp  chat.h  common.cpp  common.h  console.cpp  console.h  json-partial.cpp  json-partial.h  json-schema-to-grammar.cpp  json-schema-to-grammar.h  llguidance.cpp  log.cpp  log.h  ngram-cache.cpp  ngram-cache.h  regex-partial.cpp  regex-partial.h  sampling.cpp  sampling.h  speculative.cpp  speculative.h
composeApp/src/androidMain/cpp/ggml/include/: ggml-alloc.h  ggml-vulkan.h  ggml.h
composeApp/src/androidMain/cpp/ggml/src/: ggml-common.h  ggml-impl.h  ggml-opt.cpp  ggml-quants.h  ggml-threading.h  ggml.c  gguf.cpp
composeApp/src/androidMain/cpp/include/: ggml-backend.h  ggml-metal.h  ggml-opt.h  ggml-rpc.h  gguf.h  llama-cpp.h
composeApp/src/androidMain/kotlin/ru/llama/tool/: App.kt  MainActivity.kt  Platform.android.kt
composeApp/src/androidMain/kotlin/ru/llama/tool/core/: CoroutinesUtils.android.kt
composeApp/src/androidMain/kotlin/ru/llama/tool/core/data_store/: DataStorePreferences.android.kt
composeApp/src/androidMain/kotlin/ru/llama/tool/data/io/: GGUFFileManagerImpl.android.kt
composeApp/src/androidMain/kotlin/ru/llama/tool/data/preferences/: DataStorePreferences.android.kt
composeApp/src/androidMain/kotlin/ru/llama/tool/data/room/: MainDatabase.android.kt
composeApp/src/androidMain/kotlin/ru/llama/tool/di/: IOModule.android.kt  NetworkModule.android.kt
composeApp/src/androidMain/kotlin/ru/llama/tool/llama/: LlamaAndroid.kt  LlamaManager.kt
composeApp/src/androidMain/kotlin/ru/llama/tool/server/: LlamaManager.kt  LlamaManagerImpl.kt  LlamaServerManager.kt
composeApp/src/androidMain/res/values/: strings.xml  themes.xml
composeApp/src/commonMain/composeResources/values/: strings.xml
composeApp/src/commonMain/composeResources/values-en/: strings.xml
composeApp/src/commonMain/kotlin/ru/llama/tool/: App.kt  Platform.kt
composeApp/src/commonMain/kotlin/ru/llama/tool/core/: CoroutinesUtils.kt  UtilsConst.kt
composeApp/src/commonMain/kotlin/ru/llama/tool/core/data_store/: AsyncWorkersInitializer.kt  DataStorePreferences.kt  PreferencesConstants.kt  SettingConst.kt
composeApp/src/commonMain/kotlin/ru/llama/tool/data/api/: ApiConst.kt  ApiService.kt  ApiServiceImpl.kt  DefaultHttpClient.kt
composeApp/src/commonMain/kotlin/ru/llama/tool/data/data_sources/: LlamaAiDataSource.kt  LlamaAiDataSourceImpl.kt
composeApp/src/commonMain/kotlin/ru/llama/tool/data/io/: GGUFFileInfo.kt  GGUFFileManager.kt
composeApp/src/commonMain/kotlin/ru/llama/tool/data/preferences/: AsyncWorkersInitializer.kt  DataStorePreferences.kt  PreferencesConstants.kt  SettingConst.kt
composeApp/src/commonMain/kotlin/ru/llama/tool/data/repository/: LlamaAiRepository.kt  LlamaAiRepositoryImpl.kt
composeApp/src/commonMain/kotlin/ru/llama/tool/data/room/: DBConst.kt  MainDatabase.kt
composeApp/src/commonMain/kotlin/ru/llama/tool/data/server/: ILlamaManager.kt
composeApp/src/commonMain/kotlin/ru/llama/tool/di/: DataSourceModule.kt  DataStoreModule.kt  IOModule.kt  NetworkDiConst.kt  NetworkModule.kt  RepositoryModule.kt  UseCaseModule.kt  databaseModule.kt  rootModules.kt
composeApp/src/commonMain/kotlin/ru/llama/tool/domain/: ConnectionCheckUseCase.kt  SendChatRequestUseCase.kt  SendChatRequestUseCaseImpl.kt
composeApp/src/commonMain/kotlin/ru/llama/tool/domain/models/: Message.kt  (+6 more)
composeApp/src/jvmMain/kotlin/ru/llama/tool/: Platform.kt  main.kt
composeApp/src/jvmMain/kotlin/ru/llama/tool/di/: DataStoreModule.jvm.kt  IOModule.jvm.kt  NetworkModule.jvm.kt
composeApp/src/jvmMain/kotlin/ru/llama/tool/server/: LlamaManagerImpl.kt
composeApp/src/jvmMain/kotlin/ru/llama/tool/utils/: DesktopLifecycleManager.kt  Utils.kt
gradle/: libs.versions.toml
(+112 files in other folders)
